syntax = "proto3";
/*import "google/protobuf/empty.proto";*/
option go_package = "./;proto";

service User {
  rpc GetUserList (PageInfo) returns (UserListResonse); //用户列表
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);//根据手机号码获取用户信息
  rpc GetUserById(IdRequest) returns (UserInfoResponse);//根据用户id获取用户信息
  rpc CreateUser(CreateUserInfo) returns(UserInfoResponse);//创建用户
  rpc UpdateUser(UpdateUserInfo) returns(Empty);//更新用户
  rpc CheckPassWord (PasswordCheckInfo) returns (CheckResponse); //检查密码
}

message PasswordCheckInfo{
  string password = 1;
  string encryptedPassword = 2;
}
message CheckResponse{
  bool success=1;
}

message PageInfo{
  uint32 pn = 1;
  uint32 pSize = 2;
}
message Empty {}

message UserListResonse{
  uint32 total = 1;
  repeated UserInfoResponse data = 2;
}

message MobileRequest{
  string mobile = 1;
}

message IdRequest{
  uint32 id = 1;
}

message UserInfoResponse{
  uint32 id = 1;
  string passWord = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 birthDay = 5;
  uint32 gender = 6;
  uint32 role = 7;
}
message CreateUserInfo{
  string nickName = 1;
  string passWord = 2;
  string mobile = 3;
}

message UpdateUserInfo{
  uint32 id = 1;
  string nickName = 2;
  uint32 gender = 3;
  uint64 birthDay = 4;  //生日时间戳
}
